--- a/01-911 Calls Data Capstone Project.ipynb
+++ b/01-911 Calls Data Capstone Project.ipynb
@@ -4,14 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 911 Calls Capstone Project"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "For this capstone project we will be analyzing some 911 call data from [Kaggle](https://www.kaggle.com/mchirico/montcoalert). The data contains the following fields:\n",
+    "# Variables and their types\n",
     "\n",
     "* lat : String variable, Latitude\n",
     "* lng: String variable, Longitude\n",
@@ -21,9 +14,7 @@
     "* timeStamp: String variable, YYYY-MM-DD HH:MM:SS\n",
     "* twp: String variable, Township\n",
     "* addr: String variable, Address\n",
-    "* e: String variable, Dummy variable (always 1)\n",
-    "\n",
-    "Just go along with this notebook and try to complete the instructions or answer the questions in bold using your Python and Data Science skills!"
+    "* e: String variable, Dummy variable (always 1)"
    ]
   },
   {
@@ -283,14 +274,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Basic Questions"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "** What are the top 5 zipcodes for 911 calls? **"
+    "** Check top 5 zipcodes for 911 calls**"
    ]
   },
   {
@@ -325,7 +309,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "** What are the top 5 townships (twp) for 911 calls? **"
+    "** Check top 5 townships (twp) for 911 calls **"
    ]
   },
   {
@@ -360,7 +344,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "** Take a look at the 'title' column, how many unique title codes are there? **"
+    "** See how many unique title codes are there ** "
    ]
   },
   {
@@ -389,16 +373,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Creating new features"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "** In the titles column there are \"Reasons/Departments\" specified before the title code. These are EMS, Fire, and Traffic. Use .apply() with a custom lambda expression to create a new column called \"Reason\" that contains this string value.** \n",
     "\n",
-    "**For example, if the title column value is EMS: BACK PAINS/INJURY , the Reason column value would be EMS. **"
+    "** Get the reason from title column ** "
    ]
   },
   {
@@ -416,7 +392,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "** What is the most common Reason for a 911 call based off of this new column? **"
+    "** Look for the most common Reason for a 911 call based off new Reason column**"
    ]
   },
   {
@@ -449,7 +425,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "** Now use seaborn to create a countplot of 911 calls by Reason. **"
+    "** Create a countplot of 911 calls by Reason in Seaborn **"
    ]
   },
   {
@@ -488,8 +464,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "___\n",
-    "** Now let us begin to focus on time information. What is the data type of the objects in the timeStamp column? **"
+    "** Check the data type of the objects in the timeStamp column **"
    ]
   },
   {
@@ -518,7 +493,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "** You should have seen that these timestamps are still strings. Use [pd.to_datetime](http://pandas.pydata.org/pandas-docs/stable/generated/pandas.to_datetime.html) to convert the column from strings to DateTime objects. **"
+    "** Convert them to datetame **"
    ]
   },
   {
@@ -548,12 +523,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "** You can now grab specific attributes from a Datetime object by calling them. For example:**\n",
-    "\n",
-    "    time = df['timeStamp'].iloc[0]\n",
-    "    time.hour\n",
-    "\n",
-    "**You can use Jupyter's tab method to explore the various attributes you can call. Now that the timestamp column are actually DateTime objects, use .apply() to create 3 new columns called Hour, Month, and Day of Week. You will create these columns based off of the timeStamp column, reference the solutions if you get stuck on this step.**"
+    "** Split timestamp column to the three ones, each representing hour,month and day of week.**"
    ]
   },
   {
@@ -575,9 +545,7 @@
     "collapsed": false
    },
    "source": [
-    "** Notice how the Day of Week is an integer 0-6. Use the .map() with this dictionary to map the actual string names to the day of the week: **\n",
-    "\n",
-    "    dmap = {0:'Mon',1:'Tue',2:'Wed',3:'Thu',4:'Fri',5:'Sat',6:'Sun'}"
+    "** Convert numbers in day of week to weekdays abbreviations ** "
    ]
   },
   {
@@ -630,7 +598,7 @@
     "collapsed": false
    },
    "source": [
-    "** Now use seaborn to create a countplot of the Day of Week column with the hue based off of the Reason column. **"
+    "** Create a countplot of the Day of Week column with the hue based off of the Reason column **"
    ]
   },
   {
@@ -669,7 +637,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Now do the same for Month:**"
+    "** Now same thing for Month **"
    ]
   },
   {
@@ -708,18 +676,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Did you notice something strange about the Plot?**\n",
     "\n",
-    "_____\n",
-    "\n",
-    "** You should have noticed it was missing some Months, let's see if we can maybe fill in this information by plotting the information in another way, possibly a simple line plot that fills in the missing months, in order to do this, we'll need to do some work with pandas... **"
+    "** you can notice that some months are missing ** "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "** Now create a gropuby object called byMonth, where you group the DataFrame by the month column and use the count() method for aggregation. Use the head() method on this returned DataFrame. **"
+    "** Now create a gropuby object called byMonth to group objects by month and count method **"
    ]
   },
   {
@@ -891,7 +856,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "** Now create a simple plot off of the dataframe indicating the count of calls per month. **"
+    "** Now let's see when 911 had the lowest and highest amount of calls **"
    ]
   },
   {
@@ -930,7 +895,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "** Now see if you can use seaborn's lmplot() to create a linear fit on the number of calls per month. Keep in mind you may need to reset the index to a column. **"
+    "** You can see that January was the worst month, it might be like that because of New Years' Eve. Then holidays months are also vulnerable to 911 calls. However the \"best\" months for people's safety are the autumn ones maybe because people sit in the home and have nothing to do  ** "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "** Create a linear fit on the number of calls per month **"
    ]
   },
   {
@@ -977,7 +949,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Create a new column called 'Date' that contains the date from the timeStamp column. You'll need to use apply along with the .date() method. ** "
+    "** as you might have expected having seen the previous plot linear fit doesn't really fit into results **"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Create a new column called 'Date' that contains the date from the timeStamp column. ** "
    ]
   },
   {
@@ -995,7 +974,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "** Now groupby this Date column with the count() aggregate and create a plot of counts of 911 calls.**"
+    "** Now groupby this Date column and create a plot of counts of 911 calls.**"
    ]
   },
   {
@@ -1139,8 +1118,7 @@
     "collapsed": false
    },
    "source": [
-    "____\n",
-    "** Now let's move on to creating  heatmaps with seaborn and our data. We'll first need to restructure the dataframe so that the columns become the Hours and the Index becomes the Day of the Week. There are lots of ways to do this, but I would recommend trying to combine groupby with an [unstack](http://pandas.pydata.org/pandas-docs/stable/generated/pandas.DataFrame.unstack.html) method. Reference the solutions if you get stuck on this!**"
+    "** Now let's move on to creating  heatmaps . Let the columns become the Hours and the Index becomes the Day of the Week."
    ]
   },
   {
@@ -1417,6 +1395,13 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "** You can notice that most of the calls are between 16 and 18 probably because between these hours people head home from work and there are the most car accidents **"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": false
    },
@@ -1661,16 +1646,6 @@
    ],
    "source": [
     "sns.clustermap(dayMonth,cmap='viridis')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
-   "source": [
-    "**Continue exploring the Data however you see fit!**\n",
-    "# Great Job!"
    ]
   }
  ],
